# workshop-management

./: pyproject.toml
docs/: db.dbml  materials.csv  production_steps.csv
src/: settings.py
src/users/: admin.py  managers.py  models.py
src/users/migrations/: 0001_initial.py
src/utils/: models.py
