[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Mohamad Zahiri <mamadzhri@gamil.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
